Fix unit test name (thanks to @stanstrup)

--- a/xcms-preprocessing.org
+++ b/xcms-preprocessing.org
@@ -265,6 +265,13 @@ avoiding encapsulated function calls.
 
 *** Chromatographic peak detection
 
++ Aim: identify chromatographic peaks in the data.
++ Different methods available:
+
+*** Alignment
+
+*** Correspondence
+
 ** Conclusion
 
 
