--- a/xcms-preprocessing-bullets.org
+++ b/xcms-preprocessing-bullets.org
@@ -10,7 +10,7 @@
 #+BEGIN_EXPORT html
 ---
 title: "Metabolomics data pre-processing using xcms"
-author: "Johannes Rainer (johannes.rainer@eurac.edu)"
+author: "Johannes Rainer (johannes.rainer@eurac.edu)\ngithub/twitter: jotsetung"
 graphics: yes
 date: "`r doc_date()`"
 output:
@@ -102,8 +102,10 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   ## Define a data.frame with additional information on the files.
   pd <- data.frame(file = basename(fls),
 		   injection_idx = c(1, 19),
-		   sample = "POOL")
-  data <- readMSData(fls, pdata = new("NAnnotatedDataFrame", pd), mode = "onDisk")
+		   sample = c("POOL_1", "POOL_2"),
+		   group = "POOL")
+  data <- readMSData(fls, pdata = new("NAnnotatedDataFrame", pd),
+		     mode = "onDisk")
 #+END_SRC
 
 + Parallel processing setup should be defined at the start.
@@ -123,7 +125,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 + Interactive code: get to know the =OnDiskMSnExp= object. 
 
 #+NAME: show-fData
-#+BEGIN_SRC R :ravel message = FALSE
+#+BEGIN_SRC R :ravel message = FALSE, results = "hide"
   data
 
   ## Access phenotype information
@@ -173,22 +175,25 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   - =filterMz= restrict to m/z range.
   - =filterMsLevel= subset to certain MS level(s).
 + Data access will be fast on indexed mzML, mzXML and CDF files.
-+ Interactive: extract all spectra measured between 180 and 181 seconds.
++ Interactive code: extract all spectra measured between 180 and 181
+  seconds. Using the =%>%= (pipe) operator to avoid nested function calls.
 
 #+NAME: spectra-filterRt
 #+BEGIN_SRC R :ravel message = FALSE
-  ## Get all spectra measured between 180 and 181 seconds 
-  sps <- spectra(filterRt(data, rt = c(180, 181)))
+  ## Get all spectra measured between 180 and 181 seconds
+  ## Use %>% for better readability
+  sps <- data %>%
+      filterRt(rt = c(180, 181)) %>%
+      spectra
 
   ## How many spectra?
   length(sps)
 
   ## From which file?
   lapply(sps, fromFile)
-
 #+END_SRC
 
-+ Example: plot the data from the last spectrum
++ Interactive code: plot the data from the last spectrum
 
 #+NAME: spectrum-plot
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Spectrum at a retention time of about 180 seconds."
@@ -213,20 +218,28 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 
 + We have one chromatogram per file.
 + =aggregationFun= parameter allows to switch from TIC ="sum"= to BPC ="max"=.
-+ Interactive code: get chromatographic data for Serine ([M+H]+ adduct m/z
++ Interactive code: extract ion chromatogram for Serine ([M+H]+ adduct m/z
   106.0455 matches the second largest peak in spectrum above).
 
 #+NAME: serine-xic
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Extracted ion chromatogram for the Serine [M+H]+ ion."
-  ## Using %>% to better show the workflow of data extraction
+  ## Plot first the spectrum
+  par(mfrow = c(1, 2))
+  plot(mz(sps[[6]]), intensity(sps[[6]]), type = "h", xlab = "m/z",
+       ylab = "intensity", main = rtime(sps[[6]]))
+  ## Highlight the m/z range from which we extract the Serine XIC
+  rect(106.02, 0, 106.07, 70000, border = "#ff000020")
+
+  ## Extract and plot the XIC for Serine
   data %>%
       filterRt(rt = c(175, 189)) %>%
       filterMz(mz = c(106.02, 106.07)) %>%
-      chromatogram() %>%
+      chromatogram(aggregationFun = "max") %>%
       plot()
 
 #+END_SRC 
 
++ Easy to access sub-sets of the raw data.
 + =spectra= to get intensities along m/z for discrete retention time.
 + =chromatogram= to get intensities along rt for m/z range. 
 + Use =rtime=, =mz=, =intensity= to access the values.
@@ -251,6 +264,8 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
       plot(type = "XIC")
 #+END_SRC
 
++ plot =type = "XIC"= creates a combined chromatographic and /map/ visualization of
+  the data.
 + Interactive code: smooth data in m/z dimension using a Savitzky-Golay filter
   followed by a centroiding that simply reports the maximum signal for each mass
   peak in each spectrum. See =?pickPeaks= for more advanced options.
@@ -295,68 +310,347 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   - /centWave/ (=CentWaveParam=) \cite{Tautenhahn:2008fx}.
   - /massifquant/ (=MassifquantParam=) \cite{Conley:2014ha}.
 
++ CentWave is a two-step approach:
+1) identify regions of interest.
+
+#+BEGIN_EXPORT html
+![](images/centWave-ROI.png)
+#+END_EXPORT
+
+2) peak detection within this regions using continuous wavelet transform (CWT).
+
+#+BEGIN_EXPORT html
+![](images/centWave-CWT.png)
+#+END_EXPORT
+
 + CentWave:
 #+NAME: centwave-help
 #+BEGIN_SRC R :ravel results = "hide"
   ?CentWaveParam
 #+END_SRC
-+ CentWave is a two-step approach:
-  - identify regions of interest
-  - peak detection within this regions using wavelet transform
 
 + Crucial parameters: =peakwidth=, =ppm=.
 + =peakwidth=: minimum and maximal expected peak width. Depends on the LC
   settings of the experiment.
-+ Example: test 
-#+BEGIN_SRC R :ravel message = FALSE
++ Interactive code: extract chromatographic data for Serine and perform peak
+  detection using default parameters
+#+NAME: centWave-default
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "XIC for Serine", results = "hide"
   ## Get the XIC for serine in the first file
   srn_chr <- chromatogram(data_cent, rt = c(165, 200),
-			  mz = c(106.03, 106.06))[1, 1]
+			  mz = c(106.03, 106.06),
+			  aggregationFun = "max")[1, 1]
+  ## Plot the data
   plot(srn_chr)
 
+  ## Get default centWave parameters
   cwp <- CentWaveParam()
-  cwp
 
   ## "dry-run" peak detection on the XIC.
   findChromPeaks(srn_chr, param = cwp)
 
-  cwp <- CentWaveParam(peakwidth = c(2, 10))
-  ## "dry-run" peak detection on the XIC.
-  pks <- findChromPeaks(srn_chr, param = cwp)
-  rect(pks[, "rtmin"], 0, pks[, "rtmax"], pks[, "maxo"], border = "#00000040")
+  cwp
+
 #+END_SRC
 
-+ How can we find appropriate values for these parameters?
-+ =peakwidth=: look at signal for some expected compounds in the samples.
-+ =ppm=: maximal allowed scattering of m/z values for one ion.
++ What went wrong? Default for =peakwidth= does not match the current data.
++ Interactive code: change =peakwidth= and run again.
+#+NAME: centWave-adapted
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "XIC for Serine with detected chromatographic peak", results = "hide"
+  cwp <- CentWaveParam(peakwidth = c(2, 10))
 
+  pks <- findChromPeaks(srn_chr, param = cwp)
+
+  ## Plot the data and higlight identified peak area
+  plot(srn_chr)
+  rect(pks[, "rtmin"], 0, pks[, "rtmax"], pks[, "maxo"], border = "#00000040")
+
+#+END_SRC
+
++ Ideally check on many known compounds.
++ =ppm=: maximal allowed scattering of m/z values for one ion.
++ Interactive code: evaluate the m/z scattering of the signal for Serine.
+#+NAME: Serine-mz-scattering-plot
 #+BEGIN_SRC R :ravel message = FALSE
-  ## Scattering of values.
+  ## Restrict the data to signal from Sering
   srn <- data_cent %>%
       filterRt(rt = c(179, 186)) %>%
       filterMz(mz = c(106.04, 106.06))
 
+  ## Plot the data
   plot(srn, type = "XIC")
+#+END_SRC
+
++ Interactive code: calculate the difference in m/z values between consecutive
+  scans.
+#+NAME: define-ppm
+#+BEGIN_SRC R :ravel message = FALSE
+  ## Extract the Serine data for one file as a data.frame
+  srn_df <- as(filterFile(srn, 1), "data.frame")
+  head(srn_df)
+
+  ## The difference between m/z values from consecutive scans
+  diff(srn_df$mz)
+
+  ## The same in ppm
+  diff(srn_df$mz) * 1e6 / mean(srn_df$mz)
+
+#+END_SRC
+
++ Ideally this should also be performed on more compounds.
++ Interactive code: perform chromatographic peak detection.
+#+NAME: findPeaks-centWave
+#+BEGIN_SRC R :ravel message = FALSE
+  ## Perform peak detection
+  cwp <- CentWaveParam(peakwidth = c(2, 10), ppm = 30)
+  data_cent <- findChromPeaks(data_cent, param = cwp)
+#+END_SRC
+
++ =XCMSnExp= object extends the =OnDiskMSnExp=, so we can access the data in the
+  same way plus it stores preprocessing results.
++ Interactive code: explore the result object.
+#+NAME: xcmsnexp
+#+BEGIN_SRC R :ravel message = FALSE, results = "hide"
+  data_cent
+
+  ## Access the peak detection results
+  head(chromPeaks(data_cent))
+#+END_SRC
+
++ For quality assessment, we could also do some summary statistics on the
+  identified peaks.
++ Interactive code: plot the location of the identified peaks in the m/z - rt
+  plane.
+#+NAME: plotChromPeaks
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Location of the identified chromatographic peaks"
+  par(mfrow = c(1, 2))
+  plotChromPeaks(data_cent, 1)
+  plotChromPeaks(data_cent, 2)
 #+END_SRC
 
 *** Alignment
 
 + Aim: adjusts shifts in retention times between samples.
++ Interactive code: plot the base peak chromatograms of all files.
+#+NAME: alignment-bpc-raw
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "BPC of all files", fig.width = 8, fig.height = 4
+  bpc_raw <- chromatogram(data_cent, aggregationFun = "max")
+  plot(bpc_raw)
+#+END_SRC
+
 + Function: =adjustRtime=.
 + Available methods:
+  - /peakGroups/ (=PeakGroupsParam=) \cite{Smith:2006ic}: align samples based on
+    hook peaks.
+  - /obiwarp/ (=ObiwarpParam=) \cite{Prince:2006jj}: warps the (full) data to a
+    reference sample.
+
++ peakGroups works reasonably well in most cases.
++ Need to define the hook peaks first: peaks present in most/all samples.
++ Important parameters:
+  - =minFraction=: proportion of samples in which a feature has to be present (0.9
+    for present in 90% of samples).
+  - =span=: degree of smoothing for the loess function, 0 likely overfitting, 1
+    linear regression. Values between 0.4 and 0.6 seem reasonable.
++ Interactive code: perform a peak grouping to define potential hook peaks.
+#+NAME: alignment-correspondence
+#+BEGIN_SRC R :ravel message = FALSE
+  ## Define the settings for the initial peak grouping - details for
+  ## choices in the next section.
+  pdp <- PeakDensityParam(sampleGroups = data_cent$group, bw = 1.8,
+			  minFraction = 1, binSize = 0.02)
+  data_cent <- groupChromPeaks(data_cent, pdp)
+
+  ## Define settings for the alignment
+  pgp <- PeakGroupsParam(minFraction = 1, span = 0.6)
+  data_cent <- adjustRtime(data_cent, param = pgp)
+#+END_SRC
+
++ Adjusted retention times are stored in the object.
++ Interactive code: inspect the difference between raw and adjusted retention
+  times. Helps to determine whether settings were OK.
+#+NAME: alignment-result
+#+BEGIN_SRC R :ravel message = FALSE, fig.width = 8, fig.height = 4
+  ## Plot the difference between raw and adjusted retention times
+  plotAdjustedRtime(data_cent)
+#+END_SRC
+
++ Evaluate alignment results:
+  - difference between raw and adjusted retention time reasonable.
+  - hook peaks along the full retention time range.
+  - comparison of BPC (TIC) before/after alignment.
+  - evaluate data for known compounds.
++ Interactive code: plot BPC before and after alignment.
+#+NAME: bpc-raw-adjusted
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "BPC before (top) and after (bottom) alignment.", fig.width = 10, fig.height = 8
+  par(mfrow = c(2, 1))
+  plot(bpc_raw)
+  plot(chromatogram(data_cent, aggregationFun = "max"))
+#+END_SRC
+
++ Interactive code: plot Serine XIC before and after alignment.
+#+NAME: serine-xic-adjusted
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "XIC for Serine before (left) and after (right) alignment", fig.width = 10, fig.height = 4
+  ## Use adjustedRtime parameter to access raw/adjusted retention times
+  par(mfrow = c(1, 2))
+  plot(chromatogram(data_cent, mz = c(106.04, 106.06),
+		    rt = c(179, 186), adjustedRtime = FALSE))
+  plot(chromatogram(data_cent, mz = c(106.04, 106.06),
+		    rt = c(179, 186)))
+#+END_SRC
+
++ If we need to repeat simply remove alignment results with =dropAdjustedRtime=
+  and retry.
 
 *** Correspondence
 
-+ Aim: group signal from the same ion across samples.
++ Aim: group signal (peaks) from the same ion across samples.
 + Function: =groupChromPeaks=.
 + Methods available:
   - /peak density/ (=PeakDensityParam=) \cite{Smith:2006ic}.
   - /nearest/ (=NearestPeaksParam=) \cite{Katajamaa:2006jh}.
+
++ peak density: 
+  - iterates through slices of m/z ranges and groups chromatographic within
+    these if peaks (from same or different samples) are close in retention time.
+  - whether they are close is estimated on the distribution of peaks along the
+    retention time.
++ Interactive code: plot the data for a 
+#+NAME: correspondence-example
+#+BEGIN_SRC R :ravel message = FALSE, results = "hide", fig.cap = "BPC for a m/z slice and defined features within this slice based on default settings." 
+  ## Plot the BPC for the m/z slice containing serine
+  par(mfrow = c(2, 1), mar = c(4, 4.3, 1, 0.5))
+  plot(chromatogram(data_cent, mz = c(106.04, 106.06), aggregationFun = "max"))
+  highlightChromPeaks(data_cent, mz = c(106.04, 106.06),
+		      whichPeaks = "apex_within")
+  ## Define parameters for the grouping
+  pdp <- PeakDensityParam(sampleGroups = data_cent$group)
+  pdp
+
+  plotChromPeakDensity(data_cent, mz = c(106.04, 106.06),
+		       type = "apex_within", param = pdp)
+
+#+END_SRC
++ Parameters:
+  - =binSize=: m/z width of the bin/slice of data in which peaks are grouped.
+  - =bw= defines the smoothness of the density function.
+  - =maxFeatures=: maximum number of features to be defined in one bin.
+  - =minFraction=: minimum proportion of samples (of one group!) for which a peak
+    has to be present.
+  - =minSamples=: minimum number of samples a peak has to be present.
++ Parameters =minFraction= and =minSamples= depend on experimental layout!
++ Interactive code: determine acceptable =bw= setting. Plot data for peaks close
+  on rt: isomers Betaine and Valine ([M+H]+ m/z 118.08625).
+#+NAME: correspondence-bw
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Define correspondence settings to separate Methylhistidine peaks.", fig.width = 10, fig.height = 10
+  par(mfrow = c(3, 1), mar = c(3, 4.3, 1, 1))
+
+  ## Plot the chromatogram for an m/z slice containing Betaine and Valine
+  mzr <- 118.08625 + c(-0.01, 0.01)
+  plot(chromatogram(data_cent, mz = mzr, aggregationFun = "max"))
+  highlightChromPeaks(data_cent, mz = mzr, whichPeaks = "apex_within")
+
+  ## Correspondence in that slice using default settings
+  pdp <- PeakDensityParam(sampleGroups = data_cent$group)
+  plotChromPeakDensity(data_cent, mz = mzr, param = pdp, type = "apex_within")
+
+  ## Reducing the bandwidth
+  pdp <- PeakDensityParam(sampleGroups = data_cent$group, bw = 1.8)
+  plotChromPeakDensity(data_cent, mz = mzr, param = pdp, type = "apex_within")
+#+END_SRC
+
++ Reducing the =bw= enables grouping of isomer peaks into different
+  features. =binSize= should be adjusted too (default is 0.25).
++ Interactive code: perform the correspondence analysis.
+#+NAME: correspondence-analysis
+#+BEGIN_SRC R :ravel message = FALSE
+  pdp <- PeakDensityParam(sampleGroups = data_cent$group, bw = 1.8,
+			  minFraction = 0.4, binSize = 0.02)
+
+  ## Perform the correspondence analysis
+  data_cent <- groupChromPeaks(data_cent, param = pdp)
+#+END_SRC
+
++ Evaluate results after correspondence: check for another slice with isomers:
+  Leucine, Isoleucine ([M+H]+ m/z 132.10191). Setting =simulate = FALSE= shows the
+  actual grouping results.
+#+NAME: correspondence-evaluate
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Result of correspondence on a slice containing the isomers Leucine and Isoleucine.", fig.width = 10, fig.heigt = 8
+  par(mfrow = c(2, 1), mar = c(3, 4.3, 1, 1))
+
+  ## Plot the chromatogram for an m/z slice containing Leucine and Isoleucine
+  mzr <- 132.10191 + c(-0.01, 0.01)
+  plot(chromatogram(data_cent, mz = mzr, aggregationFun = "max"))
+  highlightChromPeaks(data_cent, mz = mzr, whichPeaks = "apex_within")
+
+  plotChromPeakDensity(data_cent, mz = mzr, param = pdp, type = "apex_within",
+		       simulate = FALSE)
+#+END_SRC
+
++ Interactive code: inspect result object and extract feature intensities.
+#+NAME: correspondence-result
+#+BEGIN_SRC R :ravel message = FALSE
+  ## Get general information
+  data_cent
+
+  ## Overview of the performed processings
+  processHistory(data_cent)
+
+  ## Access the parameter class for a processing step
+  processParam(processHistory(data_cent)[[1]])
+
+  ## Definition of the features
+  featureDefinitions(data_cent)
+
+  ## Per-feature summary.
+  head(featureSummary(data_cent))
+
+  ## feature intensity matrix
+  fmat <- featureValues(data_cent, value = "into", method = "maxint")
+  head(fmat)
+
+#+END_SRC
+
++ =featureValues= parameters:
+  - =value=: name of the column in =chromPeaks= that should be returned.
+  - =method=: for features with multiple peaks in one sample: from which peak the
+    should the value be returned?
+
++ About missing values: peak detection may have failed. =fillChromPeaks= allows to
+  fill in signal for missing peaks from the feature area (defined by the median
+  rt and mz of all peaks assigned to the feature).
+  Parameters:
+  - =expandMz=: expands the region from which signal is integrated in m/z
+    dimension. A value of 0 means no expansion, 1 means the region is grown by
+    half of the feature's m/z width on both sides.
+  - =expandRt=: expand the retention time window of the feature for integration.
+  - =ppm=: expand the m/z width by a m/z dependent value.
++ Interactive code: evaluate the number of missing peaks and use =fillChromPeaks=
+  to retrieve a signal for them from the raw files.
+#+NAME: fillChromPeaks
+#+BEGIN_SRC R :ravel message = FALSE
+  ## Number of missing values
+  sum(is.na(fmat))
+
+  ## Define the settings for the fill-in of missing peaks
+  fpp <- FillChromPeaksParam(expandMz = 0.5, expandRt = 0.5, ppm = 20)
+  data_cent <- fillChromPeaks(data_cent, param = fpp)
+
+  ## How many missing values after
+  sum(is.na(featureValues(data_cent)))
+
+  fmat_fld <- featureValues(data_cent, value = "into", method = "maxint")
+  head(fmat_fld)
+#+END_SRC
+
++ Note: =dropFilledChromPeaks= removes filled-in peaks again.
+
 ** Conclusion
 
 + Don't blindly use default parameters!
-+ The new data objects and functions should simplify the process of inspecting
-  results and defining algorithm parameters.
++ The new data objects and functions are aimed to simplify data access and
+  inspection of results and should facilitate data set-dependent definition of
+  algorithm parameters.
 + More work to come for the analysis of chromatographic data (SRM/MRM).
 
 ** References
