--- a/xcms-preprocessing-bullets.org
+++ b/xcms-preprocessing-bullets.org
@@ -33,16 +33,35 @@ by exporting the metabolomics-preprocessing.org file.
 -->
 #+END_EXPORT
 
-** Background
+* Background
 
-+ =xcms= a relatively /old/ package for untargeted, LC/GC-MS data preprocessing.
++ =xcms= part of Bioconductor since 2006, /standard/ toolbox for LC/GC-MS data
+  preprocessing.
 + Major changes in =xcms= version > 3:
-  - re-use data structures from Bioconductor's =MSnbase= package.
-  - native MSn support.
-  - New functions.
-  - Internal changes and code cleanup.
+  - re-use data structures from Bioconductor's =MSnbase= package
+  - native MSn support
+  - new functions
+  - internal changes and code cleanup
 
-*** Definitions and common naming convention
+** Mass spectrometry
+
++ Mass spectrometry (MS) allows to measure abundances of charged ions in a
+  sample.
++ Data is represented/measured in a spectrum.
+#+BEGIN_EXPORT html
+![](images/MS.png)
+#+END_EXPORT
+
++ Many ions with the same/similar mass-to-charge ratio m/z.
++ Additional separation of compounds by additional properties
+  (hydrophob/hydrophil): liquid or gas chromatpgraphy.
+#+BEGIN_EXPORT html
+![](images/LCMS.png)
+#+END_EXPORT
+
++ LC-MS based untargeted metabolomics: identify /chromatographic/ peaks.
+
+** Definitions and common naming convention
 
 + chromatographic peak: peak containing the signal from an ion in retention time
   dimension.
@@ -51,13 +70,13 @@ by exporting the metabolomics-preprocessing.org file.
 + alignment: process that adjusts for retention time differences between files.
 + correspondence: grouping of chromatographic peaks (presumably from the same
   ion) across files.
-+ feature: chromatographic peaks grouped across files.
++ feature: chromatographic peaks grouped across samples.
 
-** Workflow: metabolomics data preprocessing using =xcms=
+* Workflow: metabolomics data preprocessing using =xcms=
 
-The workflow is focused on the *new* =xcms= interface/functions and describes:
-+ Basic MS data handling (=MSnbase=).
-+ Simple MS data centroiding (=MSnbase=).
+The workflow is focused on the *new* =xcms= interface/functions and covers:
++ Basic MS data handling (=MSnbase=)
++ Simple MS data centroiding (=MSnbase=)
 + LC-MS data pre-processing (=xcms=):
   - chromatographic peak detection
   - alignment
@@ -67,7 +86,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   - compound identification
   - differential abundance analysis
 
-*** Prerequisites
+** Prerequisites
 
 + Rstudio
 + R version >= 3.5.0
@@ -81,13 +100,16 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
       devtools::install_github("sneumann/xcms", ref = "master")
 #+END_SRC
 
-*** Data import and representation
+** Data import and representation
 
 + MS data can be loaded with the =readMSData= function.
 + =mode = "onDisk"= does read only header information from the files, actual m/z
   and intensity values are retrieved on demand.
 + /on-disk/ mode enables analysis of very large experiments.
-+ Interactive code: read the toy data set.
++ Interactive code: read the toy data set:
+  - subset from 2 files with pooled serum samples
+  - UHPLC (Agilent 1290) coupled with Q-TOF MS (TripleTOF 5600+ AB Sciex)
+  - HILIC-based chromatographic separation
 
 #+NAME: load-data
 #+BEGIN_SRC R :ravel message = FALSE
@@ -111,7 +133,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 + Parallel processing setup should be defined at the start.
 + Most functions from =xcms= and =MSnbase= are parallelized /per-file/ and use the
   registered setup.
-+ Interactive code: parallel setup
++ Interactive code: parallel processing setup.
 
 #+NAME: parallel-setup
 #+BEGIN_SRC R :ravel message = FALSE
@@ -139,9 +161,9 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 #+END_SRC
 
 + Note: with the data not being in memory, any data manipulation (such as
-  smoothing) is never /applied/ to the data but is performed on-the-fly.
+  smoothing) is never applied to the data but is performed on-the-fly.
 
-*** Basic data access and visualization
+** Basic data access and visualization
 
 + MS data in an =OnDiskMSnExp= object is organized by spectrum (similarly to mzML
   files).
@@ -167,7 +189,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 #+END_SRC
 
 + =spectra= gets the list of all spectra (from all files). This loads the full
-  data from all files!
+  data from all files, which can be slow!
 + In most cases we work with subsets anyway: use filter functions to subset the
   data:
   - =filterFile= subset to individual files/samples.
@@ -190,7 +212,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   length(sps)
 
   ## From which file?
-  lapply(sps, fromFile)
+  sapply(sps, fromFile)
 #+END_SRC
 
 + Interactive code: plot the data from the last spectrum
@@ -202,12 +224,12 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 
 + Spectra represent intensities along the m/z dimension for discrete retention
   times.
-+ =chromatogram= function retrieves chromatographic data (intensities along the
-  retention time axis for a certain m/z range).
++ The =chromatogram= function retrieves chromatographic data (intensities along
+  the retention time axis for a certain m/z range).
 + Interactive code: get the total ion chromatogram for each file.
 
 #+NAME: chromatogram
-#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Total ion chromatogram."
+#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Total ion chromatogram.", fig.width = 10, fig.height = 5
   ## Get chromatographic data (TIC) for an m/z slice
   chr <- chromatogram(data)
   chr
@@ -228,7 +250,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   plot(mz(sps[[6]]), intensity(sps[[6]]), type = "h", xlab = "m/z",
        ylab = "intensity", main = rtime(sps[[6]]))
   ## Highlight the m/z range from which we extract the Serine XIC
-  rect(106.02, 0, 106.07, 70000, border = "#ff000020")
+  rect(106.02, 0, 106.07, 70000, border = "#ff000040")
 
   ## Extract and plot the XIC for Serine
   data %>%
@@ -242,9 +264,9 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 + Easy to access sub-sets of the raw data.
 + =spectra= to get intensities along m/z for discrete retention time.
 + =chromatogram= to get intensities along rt for m/z range. 
-+ Use =rtime=, =mz=, =intensity= to access the values.
++ Use =rtime=, =mz=, =intensity= to access the MS values.
 
-*** Centroiding of profile MS data
+** Centroiding of profile MS data
 
 + /centroiding/ is the process in which mass peaks are reduced to a single,
   representative signal, their centroids.
@@ -252,7 +274,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 + Proper centroiding can improve data accuracy.
 + =MSnase= provides basic tools to perform MS data smoothing and centroiding:
   =smooth= and =pickPeaks=.
-+ Interactive code: show the profile mode data for Serine.
++ Interactive code: show the combined m/z, rt and intensity data for Serine.
 
 #+NAME: serine-profile-mode-data
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Profile data for Serine."
@@ -271,7 +293,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   peak in each spectrum. See =?pickPeaks= for more advanced options.
 
 #+NAME: centroiding
-#+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Centroided data for Serine."
+#+BEGIN_SRC R :ravel message = FALSE, warning = FALSE, fig.cap = "Centroided data for Serine.", fig.width = 10, fig.height = 5
   ## Smooth the signal, then do a simple peak picking.
   data_cent <- data %>%
       smooth(method = "SavitzkyGolay", halfWindowSize = 6) %>%
@@ -301,6 +323,8 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 			  mode = "onDisk")
 #+END_SRC
 
+** LC-MS data preprocessing
+
 *** Chromatographic peak detection
 
 + Aim: identify chromatographic peaks in the data.
@@ -323,17 +347,19 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 ![](images/centWave-CWT.png)
 #+END_EXPORT
 
-+ CentWave:
++ CentWave parameters:
+
 #+NAME: centwave-help
 #+BEGIN_SRC R :ravel results = "hide"
   ?CentWaveParam
 #+END_SRC
 
 + Crucial parameters: =peakwidth=, =ppm=.
-+ =peakwidth=: minimum and maximal expected peak width. Depends on the LC
++ =peakwidth=: minimal and maximal expected peak width. Depends on the LC
   settings of the experiment.
 + Interactive code: extract chromatographic data for Serine and perform peak
   detection using default parameters
+
 #+NAME: centWave-default
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "XIC for Serine", results = "hide"
   ## Get the XIC for serine in the first file
@@ -341,6 +367,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 			  mz = c(106.03, 106.06),
 			  aggregationFun = "max")[1, 1]
   ## Plot the data
+  par(mfrow = c(1, 1), mar = c(4, 4.5, 1, 1))
   plot(srn_chr)
 
   ## Get default centWave parameters
@@ -350,11 +377,11 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   findChromPeaks(srn_chr, param = cwp)
 
   cwp
-
 #+END_SRC
 
 + What went wrong? Default for =peakwidth= does not match the current data.
 + Interactive code: change =peakwidth= and run again.
+
 #+NAME: centWave-adapted
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "XIC for Serine with detected chromatographic peak", results = "hide"
   cwp <- CentWaveParam(peakwidth = c(2, 10))
@@ -364,12 +391,12 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   ## Plot the data and higlight identified peak area
   plot(srn_chr)
   rect(pks[, "rtmin"], 0, pks[, "rtmax"], pks[, "maxo"], border = "#00000040")
-
 #+END_SRC
 
-+ Ideally check on many known compounds.
++ Ideally check settings on more known compounds.
 + =ppm=: maximal allowed scattering of m/z values for one ion.
 + Interactive code: evaluate the m/z scattering of the signal for Serine.
+
 #+NAME: Serine-mz-scattering-plot
 #+BEGIN_SRC R :ravel message = FALSE
   ## Restrict the data to signal from Sering
@@ -383,6 +410,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 
 + Interactive code: calculate the difference in m/z values between consecutive
   scans.
+
 #+NAME: define-ppm
 #+BEGIN_SRC R :ravel message = FALSE
   ## Extract the Serine data for one file as a data.frame
@@ -394,11 +422,12 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 
   ## The same in ppm
   diff(srn_df$mz) * 1e6 / mean(srn_df$mz)
-
 #+END_SRC
 
 + Ideally this should also be performed on more compounds.
++ =ppm= should be large enough to capture the full chromatographic peak.
 + Interactive code: perform chromatographic peak detection.
+
 #+NAME: findPeaks-centWave
 #+BEGIN_SRC R :ravel message = FALSE
   ## Perform peak detection
@@ -406,9 +435,10 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   data_cent <- findChromPeaks(data_cent, param = cwp)
 #+END_SRC
 
-+ =XCMSnExp= object extends the =OnDiskMSnExp=, so we can access the data in the
-  same way plus it stores preprocessing results.
++ Result: =XCMSnExp= object extends the =OnDiskMSnExp=, so we can access the data in
+  the same way plus it stores preprocessing results.
 + Interactive code: explore the result object.
+
 #+NAME: xcmsnexp
 #+BEGIN_SRC R :ravel message = FALSE, results = "hide"
   data_cent
@@ -434,7 +464,9 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 + Interactive code: plot the base peak chromatograms of all files.
 #+NAME: alignment-bpc-raw
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "BPC of all files", fig.width = 8, fig.height = 4
+  ## Extract base peak chromatograms
   bpc_raw <- chromatogram(data_cent, aggregationFun = "max")
+  par(mfrow = c(1, 1))
   plot(bpc_raw)
 #+END_SRC
 
@@ -452,7 +484,8 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
     for present in 90% of samples).
   - =span=: degree of smoothing for the loess function, 0 likely overfitting, 1
     linear regression. Values between 0.4 and 0.6 seem reasonable.
-+ Interactive code: perform a peak grouping to define potential hook peaks.
++ Interactive code: perform a peak grouping to define potential hook peaks and
+  align the samples based on these.
 #+NAME: alignment-correspondence
 #+BEGIN_SRC R :ravel message = FALSE
   ## Define the settings for the initial peak grouping - details for
@@ -481,18 +514,22 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   - comparison of BPC (TIC) before/after alignment.
   - evaluate data for known compounds.
 + Interactive code: plot BPC before and after alignment.
+
 #+NAME: bpc-raw-adjusted
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "BPC before (top) and after (bottom) alignment.", fig.width = 10, fig.height = 8
   par(mfrow = c(2, 1))
+  ## Plot the raw base peak chromatogram
   plot(bpc_raw)
+  ## Plot the BPC after alignment
   plot(chromatogram(data_cent, aggregationFun = "max"))
 #+END_SRC
 
 + Interactive code: plot Serine XIC before and after alignment.
+
 #+NAME: serine-xic-adjusted
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "XIC for Serine before (left) and after (right) alignment", fig.width = 10, fig.height = 4
   ## Use adjustedRtime parameter to access raw/adjusted retention times
-  par(mfrow = c(1, 2))
+  par(mfrow = c(1, 2), mar = c(4, 4.5, 1, 0.5))
   plot(chromatogram(data_cent, mz = c(106.04, 106.06),
 		    rt = c(179, 186), adjustedRtime = FALSE))
   plot(chromatogram(data_cent, mz = c(106.04, 106.06),
@@ -511,11 +548,13 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   - /nearest/ (=NearestPeaksParam=) \cite{Katajamaa:2006jh}.
 
 + peak density: 
-  - iterates through slices of m/z ranges and groups chromatographic within
-    these if peaks (from same or different samples) are close in retention time.
+  - iterates through slices of m/z ranges and groups chromatographic in each if
+    peaks (from same or different samples) are close in retention time.
   - whether they are close is estimated on the distribution of peaks along the
     retention time.
-+ Interactive code: plot the data for a 
++ Interactive code: plot the data for the m/z slice containing the Serine peak
+  and dry-run a correspondence analysis.
+
 #+NAME: correspondence-example
 #+BEGIN_SRC R :ravel message = FALSE, results = "hide", fig.cap = "BPC for a m/z slice and defined features within this slice based on default settings." 
   ## Plot the BPC for the m/z slice containing serine
@@ -523,14 +562,20 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   plot(chromatogram(data_cent, mz = c(106.04, 106.06), aggregationFun = "max"))
   highlightChromPeaks(data_cent, mz = c(106.04, 106.06),
 		      whichPeaks = "apex_within")
-  ## Define parameters for the grouping
+
+  ## Get default parameters for the grouping
   pdp <- PeakDensityParam(sampleGroups = data_cent$group)
   pdp
 
+  ## Dry-run correspondence and show the results.
   plotChromPeakDensity(data_cent, mz = c(106.04, 106.06),
 		       type = "apex_within", param = pdp)
 
 #+END_SRC
+
++ Black line shows the peak density estimate, points represent the position of
+  peaks along the retention time axis per sample and grey rectangles indicate
+  grouped peaks (features).
 + Parameters:
   - =binSize=: m/z width of the bin/slice of data in which peaks are grouped.
   - =bw= defines the smoothness of the density function.
@@ -539,8 +584,12 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
     has to be present.
   - =minSamples=: minimum number of samples a peak has to be present.
 + Parameters =minFraction= and =minSamples= depend on experimental layout!
-+ Interactive code: determine acceptable =bw= setting. Plot data for peaks close
-  on rt: isomers Betaine and Valine ([M+H]+ m/z 118.08625).
++ =binSize= should be small enough that peaks from different ions measured at the
+  same retention time would not be grouped together.
++ Interactive code: determine acceptable =bw= setting. Plot data for ions with
+  same m/z and similar retention time: isomers Betaine and Valine ([M+H]+ m/z
+  118.08625).
+
 #+NAME: correspondence-bw
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Define correspondence settings to separate Methylhistidine peaks.", fig.width = 10, fig.height = 10
   par(mfrow = c(3, 1), mar = c(3, 4.3, 1, 1))
@@ -560,8 +609,9 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 #+END_SRC
 
 + Reducing the =bw= enables grouping of isomer peaks into different
-  features. =binSize= should be adjusted too (default is 0.25).
+  features.
 + Interactive code: perform the correspondence analysis.
+
 #+NAME: correspondence-analysis
 #+BEGIN_SRC R :ravel message = FALSE
   pdp <- PeakDensityParam(sampleGroups = data_cent$group, bw = 1.8,
@@ -574,6 +624,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 + Evaluate results after correspondence: check for another slice with isomers:
   Leucine, Isoleucine ([M+H]+ m/z 132.10191). Setting =simulate = FALSE= shows the
   actual grouping results.
+
 #+NAME: correspondence-evaluate
 #+BEGIN_SRC R :ravel message = FALSE, fig.cap = "Result of correspondence on a slice containing the isomers Leucine and Isoleucine.", fig.width = 10, fig.heigt = 8
   par(mfrow = c(2, 1), mar = c(3, 4.3, 1, 1))
@@ -588,7 +639,8 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 #+END_SRC
 
 + Interactive code: inspect result object and extract feature intensities.
-#+NAME: correspondence-result
+
+#+NAME: correspondence-result-object
 #+BEGIN_SRC R :ravel message = FALSE
   ## Get general information
   data_cent
@@ -598,7 +650,13 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 
   ## Access the parameter class for a processing step
   processParam(processHistory(data_cent)[[1]])
+#+END_SRC
 
++ Interactive code: inspect definition of features and extract feature
+intensities.
+
+#+NAME: correspondence-feature-values
+#+BEGIN_SRC R :ravel message = FALSE
   ## Definition of the features
   featureDefinitions(data_cent)
 
@@ -608,7 +666,6 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   ## feature intensity matrix
   fmat <- featureValues(data_cent, value = "into", method = "maxint")
   head(fmat)
-
 #+END_SRC
 
 + =featureValues= parameters:
@@ -627,6 +684,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   - =ppm=: expand the m/z width by a m/z dependent value.
 + Interactive code: evaluate the number of missing peaks and use =fillChromPeaks=
   to retrieve a signal for them from the raw files.
+
 #+NAME: fillChromPeaks
 #+BEGIN_SRC R :ravel message = FALSE
   ## Number of missing values
@@ -645,7 +703,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
 
 + Note: =dropFilledChromPeaks= removes filled-in peaks again.
 
-** Conclusion
+* Summary
 
 + Don't blindly use default parameters!
 + The new data objects and functions are aimed to simplify data access and
@@ -653,8 +711,7 @@ The workflow is focused on the *new* =xcms= interface/functions and describes:
   algorithm parameters.
 + More work to come for the analysis of chromatographic data (SRM/MRM).
 
-** References
-
+* References
 
 
 
