--- a/references.bib
+++ b/references.bib
@@ -53,3 +53,24 @@ pages = {6140--6152},
 month = sep
 }
 
+@article{Smith:2014di,
+author = {Smith, Rob and Mathis, Andrew D and Ventura, Dan and Prince, John T},
+title = {{Proteomics, lipidomics, metabolomics: a mass spectrometry tutorial from a computer scientist's point of view.}},
+journal = {BMC Bioinformatics},
+year = {2014},
+volume = {15 Suppl 7},
+number = {Suppl 7},
+pages = {S9},
+month = may
+}
+
+@article{Savitzky:1964bn,
+author = {Savitzky, Abraham and Golay, M J E},
+title = {{Smoothing and Differentiation of Data by Simplified Least Squares Procedures.}},
+journal = {Analytical chemistry},
+year = {1964},
+volume = {36},
+number = {8},
+pages = {1627--1639},
+month = jul
+}
